samples/_failures_safe/1761704777_ca9b72_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c08c209.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_4c08c209.c:128:19: error: expected ‘;’ at end of input
  128 |             printf
      |                   ^
      |                   ;
./samples/SAFE/__tmp_4c08c209.c:128:13: error: expected declaration or statement at end of input
  128 |             printf
      |             ^~~~~~
./samples/SAFE/__tmp_4c08c209.c:128:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4c08c209.c:128:13: error: expected declaration or statement at end of input
